AGREGUE ROUTING, HOME Y LOGIN

--- a/Fronted/src/app/components/logo-ap/logo-ap.component.html
+++ b/Fronted/src/app/components/logo-ap/logo-ap.component.html
@@ -13,7 +13,7 @@
                     <a href=""><img  src="\assets\facebook3.png" id="facebook" class="rounded-circle"  width = "33%"></a>
                     <a href=""><img  src="\assets\instagram1.jpg" id="instagram" class="rounded-circle"  width = "33%"></a>
                     
-                    <button type="button" class="btn btn-outline-light" id="button">Ingreso</button>
+                    <button type="button" class="btn btn-outline-light" (click)="login()" id="button">Ingreso</button>
            
                    </div>
 
