--- a/Fronted/src/app/components/acercade/acercade.component.html
+++ b/Fronted/src/app/components/acercade/acercade.component.html
@@ -5,7 +5,7 @@
       
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-ig-2">
-        <p>Sebastián Hauzer </p>
+        <p id="nombre">{{persona.nombre}} {{persona.apellido}} </p>
         <p> Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-ig-8">
