Falta agregar las validaciones

--- a/Fronted/src/app/components/acercade/acercade.component.html
+++ b/Fronted/src/app/components/acercade/acercade.component.html
@@ -6,14 +6,14 @@
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-ig-2">
         <p id="nombre">{{persona.nombre}} {{persona.apellido}} </p>
-        <p> Full Stack Developer Jr</p>
+        <p id="titulo">{{persona.titulo}}</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-ig-8">
         <span>
             <h1>
                 Acerca de mi
             </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quidem doloribus, sit quo quis voluptatem ex alias vel eligendi, accusamus voluptates assumenda nihil accusantium officia cupiditate excepturi eveniet amet iure?</p>
+            <p id="acercaDe">{{persona.acercaDe}}</p>
         </span>
     </div>
 </div>
