--- a/Fronted/src/app/components/logo-ap/logo-ap.component.html
+++ b/Fronted/src/app/components/logo-ap/logo-ap.component.html
@@ -3,6 +3,7 @@
         <div class="col-lg-1 col-sm-1  col-md-1 col-md-1" >
                 <div class="logo" >
                 <img  src='\assets\LogoAp1.png' id="logoAp" class="img-fluid" class="rounded float-start" >
+                <div class="col-lg-1 col-sm-1 col-md-1 col-md-1" ><h5>#SEPROGRAMAR</h5></div>
                </div>
         </div>
         <div class="col-lg-10 col-sm-10 col-md-10 col-xs-10"  ></div>
