--- a/ProyectoFinal_Sebasti-nHauzer-master/ProyectoFinal_Sebasti-nHauzer-master/Fronted/src/app/components/login/login.component.html
+++ b/ProyectoFinal_Sebasti-nHauzer-master/ProyectoFinal_Sebasti-nHauzer-master/Fronted/src/app/components/login/login.component.html
@@ -1,32 +1,45 @@
-<h1 class="m-5"> Iniciar Sesion</h1>
-<form [formGroup]="form" class="m-5" (ngSubmit)="onEnviar($event)" >
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email</label>
-    <input type="email" formcontrolName="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
-    [ngClass]="{'is-invalid':Email?.errors && Email?.touched, 'is-valid':!Email?.errors && Email?.touched}">
-    
-    <div *ngIf="Email?.errors && Email?.touched">
-    <p *ngIf="Email?.hasError('required')" class="text-danger">
-      El email es requerido
-    </p>
-    <p *ngIf="Email?.hasError('email')" class="text-danger">
-      El formato del email debe ser válido.
-    </p>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-white-50 mb-5">Por favor Usuario y clave</p>
+              <form #f="ngForm"(ngSubmit)="onLogin()" novalidate>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" 
+                  [(ngModel)]="nombreUsuario" required 
+                  />
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="password" id="password" name="password" class="form-control form-control-lg"
+                  [(ngModel)]="password" required  />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+
+                <!--<p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>-->
+
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+              </form>
+
+
+            </div>
+
+            <div>
+              <p class="mb-0">  ¿No tenes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1">Contraseña</label>
-    <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
-    [ngClass]="{'is-invalid':Password?.errors && Password?.touched,
-  'is-valid':!Password?.errors && Password?.touched}">
-  <div *ngIf="Password?.errors && Password?.touched">
-    <p *ngIf="Password?.hasError('required')" class="text-danger">
-      La contraseña es requerida
-    </p>
-    <p *ngIf="Password?.errors?.['minLength']" class="text-danger">
-      La contraseña debe ser de 8 o mas caracteres.
-    </p>
-  </div>
-  </div> 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</section>
