Todo el fronted falta los guards

--- a/ProyectoFinal_Sebasti-nHauzer-master/ProyectoFinal_Sebasti-nHauzer-master/Fronted/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal_Sebasti-nHauzer-master/ProyectoFinal_Sebasti-nHauzer-master/Fronted/src/app/components/logo-ap/logo-ap.component.html
@@ -14,8 +14,8 @@
                     <a href=""><img  src="\assets\facebook3.png" id="facebook" class="rounded-circle"  width = "33%"></a>
                     <a href=""><img  src="\assets\instagram1.jpg" id="instagram" class="rounded-circle"  width = "33%"></a>
                     
-                    <button type="button" class="btn btn-outline-light" (click)="login()" id="button">Ingreso</button>
-           
+                    <button type="button" class="btn btn-outline-light" (click)="login()" id="button" *ngIf="! isLogged">Ingreso</button>
+                    <button type="button" class="btn btn-outline-light" (click)="onLogOut()" id="button" *ngIf="isLogged">Cerrar sesion</button>
                    </div>
 
             </div>
